# interrogate

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  codecov.yml  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autoupdate-pre-commit-config.yml  main.yml  pypi.yml  sanity.yml  windows.yml
docs/: Makefile  changelog.rst  conf.py  index.rst
docs/_static/: custom.css
docs/_templates/: layout.html
src/interrogate/: __init__.py  __main__.py  badge_gen.py  badge_gen.pyi  cli.py  config.py  config.pyi  coverage.py  coverage.pyi  utils.py  utils.pyi  visit.py  visit.pyi
tests/functional/: __init__.py  test_cli.py  test_coverage.py
tests/functional/fixtures/: expected_detailed.txt  expected_detailed_no_module.txt  expected_detailed_single_file.txt  expected_detailed_skip_covered.txt  expected_no_verbosity.txt  expected_summary.txt  expected_summary_no_module.txt  expected_summary_skip_covered.txt  expected_summary_skip_covered_all.txt
tests/functional/fixtures/windows/: expected_detailed.txt  expected_detailed_no_module.txt  expected_detailed_single_file.txt  expected_detailed_skip_covered.txt  expected_no_verbosity.txt  expected_summary.txt  expected_summary_no_module.txt  expected_summary_skip_covered.txt  expected_summary_skip_covered_all.txt
tests/functional/sample/: __init__.py  empty.py  full.py  full.pyi  ignoreme.txt  partial.py
tests/functional/sample/child_sample/: __init__.py  child_sample_module.py
tests/unit/: __init__.py  test_badge_gen.py  test_config.py  test_utils.py
