[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[tool.check-wheel-contents]
toplevel = ["interrogate"]


[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = "tests"
xfail_strict = true

[tool.coverage.run]
parallel = true
branch = true
source = ["interrogate"]
omit = ["**/__main__.py"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover"]
fail_under = 95

[tool.black]
line-length = 79

[tool.isort]
lines_after_imports=2
lines_between_types=1
known_first_party="interrogate"
known_third_party=["attr", "click", "py", "pytest", "setuptools", "tabulate"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-property-decorators = false
fail-under = 95
exclude = ["tests/functional/sample", "setup.py", "docs"]
verbose = 0
omit-covered-files = false
quiet = false
whitelist-regex = []
ignore-regex = []
color = true

[tool.mypy]
strict = true
pretty = true
ignore_missing_imports = true
